namespace EcoLens.Api.Models.Enums;

public enum CarbonCategory
{
	Food = 0,
	Transport = 1
}

