namespace EcoLens.Api.Models.Enums;

/// <summary>
/// 账单输入方式枚举
/// </summary>
public enum InputMethod
{
	/// <summary>
	/// 自动识别（OCR）
	/// </summary>
	Auto = 0,

	/// <summary>
	/// 手动输入
	/// </summary>
	Manual = 1
}
