namespace EcoLens.Api.Models.Enums;

public enum InsightType
{
	WeeklyReport = 0,
	DailyTip = 1
}

