namespace EcoLens.Api.Models.Enums;

public enum UserRole
{
	User = 0,
	Admin = 1
}

